--- a/views/upload.html
+++ b/views/upload.html
@@ -93,18 +93,18 @@
             </header>
             <section class="base-content">
                 <div class="article-content" id="article-content">
-                    <div class="articles" id="articles">
-                        <div class="article-item">
+                    <div class="articles">
+                        <div class="article-item" data-id="23123444553">
                             <i class="file-logo logo-word"></i>
                             <p class="file-header">小树和小雨的故事</p>
                             <p><span class="upload-time">2015/2/19</span>打印次数:<span id="print-num">133333</span>大小:<span id="size">200</span>kb</p>
-                            <i class="add-btn" data-mark="official-1"></i>
+                            <i class="add-btn" data-mark="official-1" data-id="23123444553"></i>
                         </div>
-                        <div class="article-item">
+                        <div class="article-item" data-id="23123444523">
                             <i class="file-logo logo-word"></i>
                             <p class="file-header">小树和小雨的故事</p>
                             <p><span class="upload-time">2015/2/19</span>打印次数:<span id="print-num">133333</span>大小:<span id="size">200</span>kb</p>
-                            <i class="add-btn" data-mark="official-2"></i>
+                            <i class="add-btn" data-mark="official-2" data-id="23123444523"></i>
                         </div>
                     </div>
                     <div class="articles">
