index.html amend

--- a/views/app/index_page.html
+++ b/views/app/index_page.html
@@ -20,17 +20,24 @@
                 <div class="title-btn homepage-btn" data-content="首页">首页</div>
                 <div class="title-btn introduction" data-content="简介">简介</div>
                 <div class="title-btn art-base" data-content="本校文库">本校文库</div>
-                <div class="title-btn"><span class="login" id="login" data-content="登录">登录</span><span>|</span><span class="signin" id="signin" data-content="注册">注册</span>
+                <div class="title-btn">
+                <span class="login" id="login" data-content="登录">登录</span><span>|</span><span class="signin" id="signin" data-content="注册">注册</span>
                 <!-- <a class="name">李四王五</a> -->
                 </div>
             </div>
+
+        </div>
+        <div class="detail-btn">
+            <a href="javascript:void(0)">个人中心</a>
+            <a href="javascript:void(0)">打印列表</a>
+            <a class="logout" href="javascript:void(0)">退出登录</a>
         </div>
     </div>
     <div id="container">
         <div class="section first">
             <div class="main-content">
                 <div class="des"><img src="./img/desc.png" alt="描述"></div>
-                <button class="print-btn">Print</button>
+                <a href="javascript:void(0)" data-log='0' class="print-btn">Print</a>
             </div>
             <div class="next-arrow"><img id="down-arrow" src="./img/newhand.gif"></div>
         </div>
