finish the page of person

--- a/views/app/index_page.html
+++ b/views/app/index_page.html
@@ -21,8 +21,8 @@
                 <div class="title-btn introduction" data-content="简介">简介</div>
                 <div class="title-btn art-base" data-content="本校文库">本校文库</div>
                 <div class="title-btn">
-                    <!-- <span class="login" id="login" data-content="登录">登录</span><span>|</span><span class="signin" id="signin" data-content="注册">注册</span> -->
-                    <a class="name">李四王五</a>
+                    <span class="login" id="login" data-content="登录">登录</span><span>|</span><span class="signin" id="signin" data-content="注册">注册</span>
+                    <!-- <a class="name">李四王五</a> -->
                 </div>
             </div>
             <div class="detail-btn">
