--- a/views/app/upload.html
+++ b/views/app/upload.html
@@ -185,7 +185,7 @@
     </div>
 
     <script src="js/lib/require.js" data-main="js/entry/upload.js"></script>
-
+    <script type="text/javascript"></script>
 </body>
 
 </html>
