--- a/views/app/person-centeral.html
+++ b/views/app/person-centeral.html
@@ -6,13 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <link rel="stylesheet" type="text/css" href="styles/center.css">
     <script type="text/javascript">
-        var Orders = []; //从后台获取订单信息
-        var HisOrder=[]; //历史订单
+    var Orders = []; //从后台获取订单信息
+    var HisOrder = []; //历史订单
     </script>
     <title>99打印</title>
 </head>
 
 <body>
+    <div class="prompt"></div>
     <div class="header">
         <div class="setWidth">
             <a class="logo" href="#">
@@ -54,8 +55,8 @@
                     <p>收货地址：<span>韵苑21111</span></p>
                 </div>
                 <div class="basic-btn">
-                    <button>编辑信息</button>
-                    <button>修改密码</button>
+                    <button class="edit-info">编辑信息</button>
+                    <button class="change-ps-btn">修改密码</button>
                 </div>
             </div>
             <div class="left-part authentic-page">
@@ -73,21 +74,21 @@
                 <div class="upload-img">
                     <div class="IDcard">
                         <a class="container-upload" href="javascript:void(0)">上传身份证<input class="upload" type="file" id="idCard-file"/></a>
-                        <img src="" alt="">
+                        <img src="" alt="" data-type="idCard">
                     </div>
                     <div class="studentCard">
                         <a class="container-upload" href="javascript:void(0)">上传学生证<input class="upload" type="file" id="stu-card-file" /></a>
-                        <img src="" alt="">
+                        <img src="" alt="" data-type='stuCard'>
                     </div>
                 </div>
                 <p class="statement">审核时间通常为2小时以内。 若超时未能完成，请联系客服
                 </p>
                 <div class="basic-btn">
-                    <button>取消</button>
-                    <button>确认</button>
+                    <button class="back">取消</button>
+                    <button class="confirm-btn">确认</button>
                 </div>
             </div>
-             <div class="left-part change-ps">
+            <div class="left-part change-ps">
                 <div class="per-detail">
                     <img class="portrait" src="img/portrait.png" />
                     <div class="detail">
@@ -97,13 +98,49 @@
                         <p>积分:<span>123</span> 余额:<span>10</span>元</p>
                     </div>
                 </div>
-                <div class="ps-input"><input type="password"><span>旧密码:</span></div>
-                <div class="ps-input"><input type="password"><span>新密码:</span></div>
-                <div class="ps-input"><input type="password"><span>再次确认:</span></div>
+                <div class="ps-input">
+                    <input class="old-ps" type="password"><span>旧密码:</span></div>
+                <div class="ps-input">
+                    <input class="new-ps" type="password"><span>新密码:</span></div>
+                <div class="ps-input">
+                    <input class="confir-ps" type="password"><span>再次确认:</span></div>
                 <div class="basic-btn">
-                    <button>取消</button>
-                    <button>确认</button>
+                    <button class="back">取消</button>
+                    <button class="prompt-ps">确认</button>
                 </div>
+            </div>
+            <!-- 
+            * 填写个人信息
+             -->
+            <div class="left-part change-info">
+                <div class="per-detail">
+                    <img class="portrait" src="img/portrait.png" />
+                    <div class="detail">
+                        <a href="">李广先</a>
+                        <p>手机:<span>1858232323</span></p>
+                        <p>账户类型:<span>管理员</span></p>
+                        <p>积分:<span>123</span> 余额:<span>10</span>元</p>
+                    </div>
+                </div>
+                <p class="info-title">个人信息</p>
+                <div class="ps-input ">
+                    <input class="name" type="type" value="123" ><span>姓名:</span></div>
+                <div class="ps-input">
+                    <input class="phone" type="type" value="123"><span>手机:</span></div>
+                <div class="ps-input">
+                    <button class="get-code">获取验证码</button>
+                    <input class="confir-code" type="type" data-iden='0'><span>验证码:</span>
+                </div>
+                <div class="ps-input">
+                    <input class="email" type="type" value="123"><span>邮箱:</span>
+                </div>
+                <div class="ps-input">
+                    <input class="address" type="type" value="123"><span>收货地址:</span></div>
+                <div class="basic-btn">
+                    <button class="back">取消</button>
+                    <button class="change-btn">确认</button>
+                </div>
+
             </div>
             <div class="right-part">
                 <div class="per-header">
@@ -117,7 +154,7 @@
                         <button class="historic-order-btn">历史订单</button>
                     </div>
                 </div>
-                <div class="order-interface">                    
+                <div class="order-interface">
                     <div class="order-header">
                         <div class="order-info">
                             订单信息
@@ -144,8 +181,8 @@
                                     <div>联系电话:<span>18888888888</span></div>
                                     <div>包含文件:<span title="201301000233123009">201301000233123009</span></div>
                                 </div>
-                                <div class="order-btns">                     
-                                    <a class="go-pay" href="javascript:void(0)" data-seq='1'>去付款</a>               
+                                <div class="order-btns">
+                                    <a class="go-pay" href="javascript:void(0)" data-seq='1'>去付款</a>
                                     <a class="cancel" data-order="12324412312" href="javascript:void(0)">取消订单</a>
                                 </div>
                                 <div class="summary">
@@ -157,7 +194,7 @@
                                     <img src="img/divided.png">
                                 </div>
                             </li>
-                             <li>
+                            <li>
                                 <div class="order-details">
                                     <div>订单编号:<span>12fdsafdfdsafdsakfjsdjklfdksajkfkdsjkljakl;s;j;lkksajkfjdjsakjfksdklfjksddajfkljsakl3</span></div>
                                     <div>收货地址:<span>韵苑按打印店</span></div>
@@ -165,8 +202,8 @@
                                     <div>联系电话:<span>18888888888</span></div>
                                     <div>包含文件:<span title="201301000233123009">201301000233123009</span></div>
                                 </div>
-                                <div class="order-btns">                     
-                                    <a class="go-pay" href="javascript:void(0)">去付款</a>               
+                                <div class="order-btns">
+                                    <a class="go-pay" href="javascript:void(0)">去付款</a>
                                     <a class="cancel" href="javascript:void(0)">取消订单</a>
                                 </div>
                                 <div class="summary">
@@ -178,7 +215,7 @@
                                     <img src="img/divided.png">
                                 </div>
                             </li>
-                             <li>
+                            <li>
                                 <div class="order-details">
                                     <div>订单编号:<span>12fdsafdfdsafdsakfjsdjklfdksajkfkdsjkljakl;s;j;lkksajkfjdjsakjfksdklfjksddajfkljsakl3</span></div>
                                     <div>收货地址:<span>韵苑按打印店</span></div>
@@ -186,8 +223,8 @@
                                     <div>联系电话:<span>18888888888</span></div>
                                     <div>包含文件:<span title="201301000233123009">201301000233123009</span></div>
                                 </div>
-                                <div class="order-btns">                     
-                                    <a class="go-pay" href="javascript:void(0)">去付款</a>               
+                                <div class="order-btns">
+                                    <a class="go-pay" href="javascript:void(0)">去付款</a>
                                     <a class="cancel" href="javascript:void(0)">取消订单</a>
                                 </div>
                                 <div class="summary">
@@ -199,7 +236,7 @@
                                     <img src="img/divided.png">
                                 </div>
                             </li>
-                             <li>
+                            <li>
                                 <div class="order-details">
                                     <div>订单编号:<span>12fdsafdfdsafdsakfjsdjklfdksajkfkdsjkljakl;s;j;lkksajkfjdjsakjfksdklfjksddajfkljsakl3</span></div>
                                     <div>收货地址:<span>韵苑按打印店</span></div>
@@ -207,8 +244,8 @@
                                     <div>联系电话:<span>18888888888</span></div>
                                     <div>包含文件:<span title="201301000233123009">201301000233123009</span></div>
                                 </div>
-                                <div class="order-btns">                     
-                                    <a class="go-pay" href="javascript:void(0)">去付款</a>               
+                                <div class="order-btns">
+                                    <a class="go-pay" href="javascript:void(0)">去付款</a>
                                     <a class="cancel" href="javascript:void(0)">取消订单</a>
                                 </div>
                                 <div class="summary">
@@ -232,8 +269,8 @@
                                     <div>联系电话:<span>18888888888</span></div>
                                     <div>包含文件:<span title="201301000233123009">201301000233123009</span></div>
                                 </div>
-                                <div class="order-btns">                     
-                                 <!--    <a class="go-pay" href="javascript:void(0)" data-seq='1'>去付款</a>       -->         
+                                <div class="order-btns">
+                                    <!--    <a class="go-pay" href="javascript:void(0)" data-seq='1'>去付款</a>       -->
                                     <a class="add-print" data-order="12324412312" data-seq='1' href="javascript:void(0)">加印</a>
                                 </div>
                                 <div class="summary">
@@ -245,7 +282,7 @@
                                     <img src="img/divided.png">
                                 </div>
                             </li>
-                             <li>
+                            <li>
                                 <div class="order-details">
                                     <div>订单编号:<span>12fdsafdfdsafdsakfjsdjklfdksajkfkdsjkljakl;s;j;lkksajkfjdjsakjfksdklfjksddajfkljsakl3</span></div>
                                     <div>收货地址:<span>韵苑按打印店</span></div>
@@ -253,8 +290,8 @@
                                     <div>联系电话:<span>18888888888</span></div>
                                     <div>包含文件:<span title="201301000233123009">201301000233123009</span></div>
                                 </div>
-                                <div class="order-btns">                     
-                                  <a class="add-print" data-order="12324412312" data-seq='1' href="javascript:void(0)">加印</a>
+                                <div class="order-btns">
+                                    <a class="add-print" data-order="12324412312" data-seq='1' href="javascript:void(0)">加印</a>
                                 </div>
                                 <div class="summary">
                                     <div class="summary-info">
@@ -265,7 +302,7 @@
                                     <img src="img/divided.png">
                                 </div>
                             </li>
-                             <li>
+                            <li>
                                 <div class="order-details">
                                     <div>订单编号:<span>12fdsafdfdsafdsakfjsdjklfdksajkfkdsjkljakl;s;j;lkksajkfjdjsakjfksdklfjksddajfkljsakl3</span></div>
                                     <div>收货地址:<span>韵苑按打印店</span></div>
@@ -273,8 +310,8 @@
                                     <div>联系电话:<span>18888888888</span></div>
                                     <div>包含文件:<span title="201301000233123009">201301000233123009</span></div>
                                 </div>
-                                <div class="order-btns">                     
-                                  <a class="add-print" data-order="12324412312" data-seq='1' href="javascript:void(0)">加印</a>
+                                <div class="order-btns">
+                                    <a class="add-print" data-order="12324412312" data-seq='1' href="javascript:void(0)">加印</a>
                                 </div>
                                 <div class="summary">
                                     <div class="summary-info">
@@ -285,7 +322,7 @@
                                     <img src="img/divided.png">
                                 </div>
                             </li>
-                             <li>
+                            <li>
                                 <div class="order-details">
                                     <div>订单编号:<span>12fdsafdfdsafdsakfjsdjklfdksajkfkdsjkljakl;s;j;lkksajkfjdjsakjfksdklfjksddajfkljsakl3</span></div>
                                     <div>收货地址:<span>韵苑按打印店</span></div>
@@ -293,8 +330,8 @@
                                     <div>联系电话:<span>18888888888</span></div>
                                     <div>包含文件:<span title="201301000233123009">201301000233123009</span></div>
                                 </div>
-                                <div class="order-btns">                     
-                                  <a class="add-print" data-order="12324412312" data-seq='1' href="javascript:void(0)">加印</a>
+                                <div class="order-btns">
+                                    <a class="add-print" data-order="12324412312" data-seq='1' href="javascript:void(0)">加印</a>
                                 </div>
                                 <div class="summary">
                                     <div class="summary-info">
