--- a/views/app/person-centeral.html
+++ b/views/app/person-centeral.html
@@ -175,7 +175,7 @@
                         <ul class="order-content" id="scroller">
                             <li>
                                 <div class="order-details">
-                                    <div>订单编号:<span>12fdsafdfdsafdsakfjsdjklfdksajkfkdsjkljakl;s;j;lkksajkfjdjsakjfksdklfjksddajfkljsakl3</span></div>
+                                    <div >订单编号:<span class="order-num">12fdsafdfdsafdsakfjsdjklfdksajkfkdsjkljakl;s;j;lkksajkfjdjsakjfksdklfjksddajfkljsakl3</span></div>
                                     <div>收货地址:<span>韵苑按打印店</span></div>
                                     <div>用户名:<span>CCC</span></div>
                                     <div>联系电话:<span>18888888888</span></div>
@@ -187,7 +187,7 @@
                                 </div>
                                 <div class="summary">
                                     <div class="summary-info">
-                                        总价：<span>120￥</span> 收货方式：
+                                        总价：<span class="money">120</span> 收货方式：
                                         <span>送货上门</span> 支付状态：
                                         <span>未支付</span>
                                     </div>
@@ -337,7 +337,7 @@
                                     <div class="summary-info">
                                         总价：<span>120￥</span> 收货方式：
                                         <span>送货上门</span> 支付状态：
-                                        <span>未支付</span>
+                                        <span id="status">未支付</span>
                                     </div>
                                     <img src="img/divided.png">
                                 </div>
@@ -348,7 +348,19 @@
             </div>
         </div>
     </div>
+    <div class="paying" data-num=''>
+        <header class="title">支付中<i class="close simplemodal-close">X</i></header>
+        <article class="content">
+            <p>您将转至支付宝网站进行支付！</p>
+            <p>请您在新打开的支付宝页面进行支付，支付完成前请不要关闭此窗口。</p>
+        </article>
+        <footer class="paying-btn">
+            <button>已完成支付</button>
+            <button>支付遇到问题</button>
+        </footer>
+    </div>
     <script src="js/lib/require.js" data-main="js/entry/center.js"></script>
+   
 </body>
 
 </html>
