--- a/views/app/person-centeral.html
+++ b/views/app/person-centeral.html
@@ -182,7 +182,9 @@
                                     <div>包含文件:<span title="201301000233123009">201301000233123009</span></div>
                                 </div>
                                 <div class="order-btns">
-                                    <a class="go-pay" href="javascript:void(0)" data-seq='1'>去付款</a>
+                                <form action="test.php" method="get" id="form" target="_blank">
+                                    <button class="go-pay" href="javascript:void(0)" data-seq='1'>去付款</button>
+                                </form>
                                     <a class="cancel" data-order="12324412312" href="javascript:void(0)">取消订单</a>
                                 </div>
                                 <div class="summary">
