--- a/views/app/upload.html
+++ b/views/app/upload.html
@@ -33,7 +33,7 @@
             <span class="color-block"></span>
         </div>
         <article class="file-content" id="file-content">
-            <a class="container-upload" href="javascript:void(0)" data-num='0'>上传文件<input class="upload" type="file" id="file-upload" multiple accept="application/msword,image/jpeg,image/png,application/vnd.ms-powerpoint,,application/nd.ms-works,application/vnd.ms-excel"/></a>          
+            <a class="container-upload" id="container-upload" href="javascript:void(0)" data-num='0'>上传文件<input class="upload" type="file" id="file-upload" multiple accept="application/msword,image/jpeg,image/png,application/vnd.ms-powerpoint,,application/nd.ms-works,application/vnd.ms-excel"/></a>          
         </article>       
         <article class="choose-base" id="choose-base">
             <header class="base-header" id="base-header">
@@ -185,7 +185,7 @@
     </div>
 
     <script src="js/lib/require.js" data-main="js/entry/upload.js"></script>
-    <script type="text/javascript" src="js/entry/header.js"></script>
+    
 </body>
 
 </html>
