--- a/views/app/upload.html
+++ b/views/app/upload.html
@@ -33,7 +33,11 @@
             <span class="color-block"></span>
         </div>
         <article class="file-content" id="file-content">
-            <a class="container-upload" id="container-upload" href="javascript:void(0)" data-num='0'>上传文件<input class="upload" type="file" id="file-upload" multiple accept="application/msword,image/jpeg,image/png,application/vnd.ms-powerpoint,,application/nd.ms-works,application/vnd.ms-excel"/></a>
+            <a class="container-upload" id="container-upload" href="javascript:void(0)" data-num='0'>上传文件
+            <!-- <input class="upload" type="file" id="file-upload" multiple accept="application/msword,image/jpeg,image/png,application/vnd.ms-powerpoint,,application/nd.ms-works,application/vnd.ms-excel"/> -->
+
+            </a>
+            <!-- <a id="uploadfiles" href="javascript:;">[Upload files]</a> -->
         </article>
         <article class="choose-base" id="choose-base">
             <header class="base-header" id="base-header">
