--- a/views/app/upload.html
+++ b/views/app/upload.html
@@ -29,102 +29,126 @@
         <!-- 上传文件 -->
         <div class="fn-choice" id="fn-choice">
             <button class="active" id="upolad-files">上传文件</button>
-            <button id="base-choose">文库选择</button>
+            <button id="base-choose">我的文库</button>
             <span class="color-block"></span>
         </div>
-        <article class="file-content" id="file-content">
+        <article class="file-content" id="file-content" style="display:none">
             <a class="container-upload" id="container-upload" href="javascript:void(0)" data-num='0'>上传文件
             <!-- <input class="upload" type="file" id="file-upload" multiple accept="application/msword,image/jpeg,image/png,application/vnd.ms-powerpoint,,application/nd.ms-works,application/vnd.ms-excel"/> -->
 
             </a>
             <!-- <a id="uploadfiles" href="javascript:;">[Upload files]</a> -->
         </article>
-        <article class="choose-base" id="choose-base">
-            <header class="base-header" id="base-header">
-                <button class="active" id="official-base">官方文库</button>
-                <!-- <button id="share-base">共享文库</button> -->
-                <input type="search" placeholder="输入关键字查找文件，按回车确定" id="search">
-            </header>
-            <section class="base-content">
-                <div class="article-content" id="article-content">
-                    <div class="articles">
-                        <div class="article-item" data-id="23123444553">
-                            <i class="file-logo logo-word"></i>
-                            <p class="file-header">小树和小雨的故事</p>
-                            <p><span class="upload-time">2015/2/19</span>打印次数:<span id="print-num">133333</span>大小:<span id="size">200</span>kb</p>
-                            <i class="add-btn" data-mark="official-1" data-id="23123444553"></i>
-                        </div>
-                        <div class="article-item" data-id="23123444523">
-                            <i class="file-logo logo-word"></i>
-                            <p class="file-header">小树和小雨的故事</p>
-                            <p><span class="upload-time">2015/2/19</span>打印次数:<span id="print-num">133333</span>大小:<span id="size">200</span>kb</p>
-                            <i class="add-btn" data-mark="official-2" data-id="23123444523"></i>
-                        </div>
-                        <div class="article-item" data-id="23123444553">
-                            <i class="file-logo logo-word"></i>
-                            <p class="file-header">小树和小雨的故事</p>
-                            <p><span class="upload-time">2015/2/19</span>打印次数:<span id="print-num">133333</span>大小:<span id="size">200</span>kb</p>
-                            <i class="add-btn" data-mark="official-1" data-id="23123444553"></i>
-                        </div>
-                        <div class="article-item" data-id="23123444523">
-                            <i class="file-logo logo-word"></i>
-                            <p class="file-header">小树和小雨的故事</p>
-                            <p><span class="upload-time">2015/2/19</span>打印次数:<span id="print-num">133333</span>大小:<span id="size">200</span>kb</p>
-                            <i class="add-btn" data-mark="official-2" data-id="23123444523"></i>
-                        </div>
-                        <div class="article-item" data-id="23123444553">
-                            <i class="file-logo logo-word"></i>
-                            <p class="file-header">小树和小雨的故事</p>
-                            <p><span class="upload-time">2015/2/19</span>打印次数:<span id="print-num">133333</span>大小:<span id="size">200</span>kb</p>
-                            <i class="add-btn" data-mark="official-1" data-id="23123444553"></i>
-                        </div>
-                        <div class="article-item" data-id="23123444523">
-                            <i class="file-logo logo-word"></i>
-                            <p class="file-header">小树和小雨的故事</p>
-                            <p><span class="upload-time">2015/2/19</span>打印次数:<span id="print-num">133333</span>大小:<span id="size">200</span>kb</p>
-                            <i class="add-btn" data-mark="official-2" data-id="23123444523"></i>
-                        </div>
-                        <div class="article-item" data-id="23123444553">
-                            <i class="file-logo logo-word"></i>
-                            <p class="file-header">小树和小雨的故事</p>
-                            <p><span class="upload-time">2015/2/19</span>打印次数:<span id="print-num">133333</span>大小:<span id="size">200</span>kb</p>
-                            <i class="add-btn" data-mark="official-1" data-id="23123444553"></i>
-                        </div>
-                        <div class="article-item" data-id="23123444523">
-                            <i class="file-logo logo-word"></i>
-                            <p class="file-header">小树和小雨的故事</p>
-                            <p><span class="upload-time">2015/2/19</span>打印次数:<span id="print-num">133333</span>大小:<span id="size">200</span>kb</p>
-                            <i class="add-btn" data-mark="official-2" data-id="23123444523"></i>
-                        </div>
-                    </div>
-                    <div class="articles">
-                        <div class="article-item">
-                            <i class="file-logo logo-word"></i>
-                            <p class="file-header">小树和小雨的故事</p>
-                            <p><span class="upload-time">2015/2/19</span>打印次数:<span id="print-num">133333</span>大小:<span id="size">200</span>kb</p>
-                            <i class="add-btn" data-mark="official-1"></i>
-                        </div>
-                        <div class="article-item">
-                            <i class="file-logo logo-word"></i>
-                            <p class="file-header">小树和小雨的故事</p>
-                            <p><span class="upload-time">2015/2/19</span>打印次数:<span id="print-num">133333</span>大小:<span id="size">200</span>kb</p>
-                            <i class="add-btn" data-mark="official-2"></i>
-                        </div>
-                    </div>
-                    <div class="articles">
-                        <div></div>
-                        <div></div>
-                    </div>
-                </div>
-                <div class="pagination" id="pagination">
-                    <div class="hover-btns">
-                        <i class="active" data-order="1"></i>
-                        <i data-order="2"></i>
-                        <i data-order="3"></i>
-                    </div>
-                    <button id="another-group">换一组</button>
-                </div>
+        <article class="choose-base" id="choose-base" style="display: block;">
+            <section class="searchBtn">
+                <input type="text" class="code" placeholder="输入文库编码">
+                <button class="apply">申请加入</button>
             </section>
+            <article class="mainContent">
+            <div class="leftBar" id="wrapper">
+                <ul>
+                    <li>
+                        <h3>测控1301</h3>
+                        编号:<span class="groupNum">f321312</span>
+                    </li>
+                      <li>
+                        <h3>测控1301</h3>
+                        编号:<span class="groupNum">f321312</span>
+                    </li>
+                      <li>
+                        <h3>测控1301</h3>
+                        编号:<span class="groupNum">f321312</span>
+                    </li>
+                      <li>
+                        <h3>测控1301</h3>
+                        编号:<span class="groupNum">f321312</span>
+                    </li>
+                      <li>
+                        <h3>测控1301</h3>
+                        编号:<span class="groupNum">f321312</span>
+                    </li>
+                      <li>
+                        <h3>测控1301</h3>
+                        编号:<span class="groupNum">f321312</span>
+                    </li>
+                      <li>
+                        <h3>测控1301</h3>
+                        编号:<span class="groupNum">f321312</span>
+                    </li>
+                      <li>
+                        <h3>测控1301</h3>
+                        编号:<span class="groupNum">f321312</span>
+                    </li>
+                </ul>
+                </div>
+                <section class="rightFile" id="rightFile">
+                    <article class='fileWrapper' id="fileWrapper">
+                        <div class="article-item" data-id="23123444553">
+                            <i class="file-logo logo-word"></i>
+                            <p class="file-header">小树和小雨的故事</p>
+                            <p><span class="upload-time">2015/2/19</span>打印次数:<span id="print-num">133333</span>大小:<span id="size">200</span>kb</p>
+                            <i class="add-btn" data-mark="official-1" data-id="23123444553"></i>
+                        </div>
+                        <div class="article-item" data-id="23123444553">
+                            <i class="file-logo logo-word"></i>
+                            <p class="file-header">小树和小雨的故事</p>
+                            <p><span class="upload-time">2015/2/19</span>打印次数:<span id="print-num">133333</span>大小:<span id="size">200</span>kb</p>
+                            <i class="add-btn" data-mark="official-1" data-id="23123444553"></i>
+                        </div>
+                        <div class="article-item" data-id="23123444553">
+                            <i class="file-logo logo-word"></i>
+                            <p class="file-header">小树和小雨的故事</p>
+                            <p><span class="upload-time">2015/2/19</span>打印次数:<span id="print-num">133333</span>大小:<span id="size">200</span>kb</p>
+                            <i class="add-btn" data-mark="official-1" data-id="23123444553"></i>
+                        </div>
+                        <div class="article-item" data-id="23123444553">
+                            <i class="file-logo logo-word"></i>
+                            <p class="file-header">小树和小雨的故事</p>
+                            <p><span class="upload-time">2015/2/19</span>打印次数:<span id="print-num">133333</span>大小:<span id="size">200</span>kb</p>
+                            <i class="add-btn" data-mark="official-1" data-id="23123444553"></i>
+                        </div>
+                        <div class="article-item" data-id="23123444553">
+                            <i class="file-logo logo-word"></i>
+                            <p class="file-header">小树和小雨的故事</p>
+                            <p><span class="upload-time">2015/2/19</span>打印次数:<span id="print-num">133333</span>大小:<span id="size">200</span>kb</p>
+                            <i class="add-btn" data-mark="official-1" data-id="23123444553"></i>
+                        </div>
+                        <div class="article-item" data-id="23123444553">
+                            <i class="file-logo logo-word"></i>
+                            <p class="file-header">小树和小雨的故事</p>
+                            <p><span class="upload-time">2015/2/19</span>打印次数:<span id="print-num">133333</span>大小:<span id="size">200</span>kb</p>
+                            <i class="add-btn" data-mark="official-1" data-id="23123444553"></i>
+                        </div>
+                        
+                        <div class="article-item" data-id="23123444553">
+                            <i class="file-logo logo-word"></i>
+                            <p class="file-header">小树和小雨的故事</p>
+                            <p><span class="upload-time">2015/2/19</span>打印次数:<span id="print-num">133333</span>大小:<span id="size">200</span>kb</p>
+                            <i class="add-btn" data-mark="official-1" data-id="23123444553"></i>
+                        </div>
+                        <div class="article-item" data-id="23123444553">
+                            <i class="file-logo logo-word"></i>
+                            <p class="file-header">小树和小雨的故事</p>
+                            <p><span class="upload-time">2015/2/19</span>打印次数:<span id="print-num">133333</span>大小:<span id="size">200</span>kb</p>
+                            <i class="add-btn" data-mark="official-1" data-id="23123444553"></i>
+                        </div>
+                        <div class="article-item" data-id="23123444553">
+                            <i class="file-logo logo-word"></i>
+                            <p class="file-header">小树和小雨的故事</p>
+                            <p><span class="upload-time">2015/2/19</span>打印次数:<span id="print-num">133333</span>大小:<span id="size">200</span>kb</p>
+                            <i class="add-btn" data-mark="official-1" data-id="23123444553"></i>
+                        </div>
+                        <div class="article-item" data-id="23123444553">
+                            <i class="file-logo logo-word"></i>
+                            <p class="file-header">小树和小雨的故事</p>
+                            <p><span class="upload-time">2015/2/19</span>打印次数:<span id="print-num">133333</span>大小:<span id="size">200</span>kb</p>
+                            <i class="add-btn" data-mark="official-1" data-id="23123444553"></i>
+                        </div>
+                      
+                    </article>
+                
+                </section>
+            </article>
         </article>
         <div class="shopping-store" id="store">
             <div class="shopping-header">
@@ -138,7 +162,7 @@
             <div class="shopping-content">
                 <article class="base-choose">
                     <div id="wrapper_1" class="container">
-                        <ul class="files-content" id="scroller">
+                        <div class="files-content" id="scroller">
                             <li>
                                 <i class="file-logo logo-word"></i>
                                 <p class="file-header">小树和小雨的故事</p>
@@ -181,7 +205,7 @@
                                 <p>上传时间:<span class="upload-time">2015/2/19 23:04</span>大小:<span>200</span>kb</p>
                                 <i class="logo-error"></i>
                             </li>
-                        </ul>
+                        </div>
                     </div>
                 </article>
             </div>
