--- a/views/app/store-centeral.html
+++ b/views/app/store-centeral.html
@@ -781,6 +781,15 @@
             </div>
         </div>
     </div>
+     <div class="paying" data-num='' style="display: block">
+        <header class="title">支付方式<i class="close simplemodal-close">X</i></header>
+        <article class="content">
+            <p>请选择支付方式~</p>
+        </article>
+        <footer class="paying-btn">
+            <a href="javascript:void(0)">微信支付</a><a href="">支付宝支付</a>
+        </footer>
+    </div>
     <script src="js/lib/require.js" data-main="js/entry/store.js"></script>
 </body>
 
